[gd_scene load_steps=9 format=2]

[ext_resource path="res://Cenas/Inimigo.gd" type="Script" id=1]
[ext_resource path="res://Assets Mario/AtlasTexture/Goomba_walk_1.tres" type="Texture" id=2]
[ext_resource path="res://Assets Mario/AtlasTexture/Goomba_walk_0.tres" type="Texture" id=3]
[ext_resource path="res://Assets Mario/sounds/smw_stomp.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 14.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 0.483636 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 15.5 )

[node name="inimigo" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="animacao" type="AnimatedSprite" parent="."]
position = Vector2( 2, -0.999996 )
scale = Vector2( 0.203394, 0.200914 )
frames = SubResource( 1 )
playing = true

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0.5 )
shape = SubResource( 2 )

[node name="areaImpacto" type="Area2D" parent="."]

[node name="colisao" type="CollisionShape2D" parent="areaImpacto"]
position = Vector2( 1, -17 )
scale = Vector2( 1.019, 0.98029 )
shape = SubResource( 3 )

[node name="timerPatrulha" type="Timer" parent="."]
wait_time = 2.579
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 2, 0.5 )
shape = SubResource( 4 )

[node name="pisaramEmMim" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="areaImpacto" to="." method="_on_areaImpacto_body_entered"]
[connection signal="timeout" from="timerPatrulha" to="." method="_on_timerPatrulha_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
